(10/4) Finished rough version of 1.04, not completely implemented but working.
(10/6) Began work on ncurses
(10/8) Added skeleton code for scanning input for ncurses
(10/8) Tested ncurses to get familiar with functionality
(10/9) Began working on PC movement
(10/10) Assignment pushed back, yooo
(10/13) Finished PC movement, begin working on monster list
(10/15) Added stair types and code to generate stairs
(10/15) troubleshooting stair generation
(10/16) Fix bug with monster list, each monster is the same
(10/17) Finished monster list, working on stairs
(10/18) Some stuff missing, monster list shows actual position, no stairs
(10/18) Fixed monster list, position is now relative to PC, still no stairs
(10/21) Cloned Professor's solution, begin reading about c++ conversion
(10/22) Convered all .c to .cpp files, begin fixing compile errors
(10/23) Fixing more compile errors
(10/24) I can get the code to compile and run with the new cpp extension, but I have to remove the W flags, fix?
(10/25) Left make file without w flags. Giving up on fog of war. Can't figure out solution.
(11/4) Created item class to store instanciated objects. Begin implementing items
(11/4) Created item dungeon to store item locations
(11/5) Struggling with items
(11/6) Printing items works, just need to access them
(11/6) Issues with item map
(11/7) Have to redo the item map
(11/8) ITEMS ITEMS ITEMS ITEMS ITEMS ITEMS
(11/10) Cloned prof's code, begin work on assignment 9
(11/11) Created equip_object and carry_object method
(11/12) Start implementing equip and carry methods
(11/12) Finished equip, need to test
(11/13) Begin writing for printing inventories
(11/14) Need to finish printing inventories, need to rewrite descriptions to
    limit object name length to max number of chars
(11/14) Need to work on picking up items to test inventory printing, implementing now
(11/14) Implemented pickup method, not complete but it works