@@ -4,3 +4,5 @@ number of characters, makes printing object names easier. Max length of object
 name is x. Pickup items by pressing ',' (or something).
 
 Refactor_carry jumbles arround the order of carry, not sure if that is an issue yet
+
+Speed boosts? How do we do that...
